# humanlayer

./: .gitignore  .pre-commit-config.yaml  .prettierignore  ARCHITECTURE_IMPROVEMENTS_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  HOTKEY_SCOPE_TESTING_PROTOCOL.md  LICENSE  Makefile  QUICKLAUNCHER_IMPLEMENTATION.md  README.md  STUDENT_EDITION_README.md  TEST_PLAN_LOCALSTORAGE.md  Tiltfile  biome.jsonc  codelayer-architecture-overview.md  docker-compose.yml  header.md  hello_session.py  hotkey-thoughts.md  hotkey.md  humanlayer.md  localtime.md  package.json  phase1-command-palette-plan.md  plan-agent-daemon-rename.md  plan-agent-ui-header.md  plan-agent-ui-hotkeys.md  plan-agent-ui-timestamp.md  plan-agent-wui-continue-session.md  plan.md  progress.md  prompt-improve.md  prompt.md  pyproject.toml  release.knowledge.md  rename.md  (+14 more)
.claude/: settings.json  settings.local.json
.claude-plugin-clean/: README.md  settings.json
.claude-plugin-clean/commands/: create_plan.md  create_plan_generic.md  create_plan_nt.md  create_worktree.md  research_codebase.md  research_codebase_nt.md
.claude/agents/: codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  debugger.md  git-commit-creator.md  linear-searcher.md  linear-ticket-reader.md  thoughts-analyzer.md  thoughts-locator.md  ticket-reader.md  ticket-searcher.md  web-search-researcher.md
.claude/commands/: ci_commit.md  ci_describe_pr.md  commit.md  create_handoff.md  create_linear_ticket.md  create_plan.md  create_plan_generic.md  create_plan_nt.md  create_worktree.md  debug.md  describe_pr.md  describe_pr_nt.md  founder_mode.md  implement_plan.md  implementation_plan.md  iterate_plan.md  iterate_plan_nt.md  linear.md  local_review.md  oneshot.md  oneshot_plan.md  phased_implement.md  ralph_impl.md  ralph_plan.md  ralph_research.md  research_codebase.md  research_codebase_generic.md  research_codebase_nt.md  resume_handoff.md  tickets.md  validate_plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  (+1 more)
.simonsays/: .gitignore  .prompt.md.swp  prompt.md  ralph.sh  sync.sh
claudecode-go/: Makefile  README.md  client.go  client_internal_test.go  client_test.go  context_test.go  doc.go  env_internal_test.go  example_context_test.go  example_test.go  go.mod  types.go  types_test.go
codelayer-windows/: README.md  build.ps1
decisions/: .gitkeep
docs/: .gitignore  Dockerfile  State Management Guide.md  bedrock-configuration.md  custom-providers.md  development.mdx  docs.knowledge.md  getting-started.md  introduction.mdx  mint.json  quickstart-python.mdx  quickstart-typescript.mdx  readme.md  workshop.mdx
docs-md/: configuring-slack.md
examples/: README.md  tool_wrapping_example.py
examples/email_escalation/: .gitignore  README.md  email_escalation.py  pyproject.toml
functionlayer/: __main__.py
hack/: CLAUDE.md  cleanup_worktree.sh  create_worktree.sh  generate_nightly_icons.py  generate_nightly_icons.sh  generate_rounded_icons.py  generate_rounded_icons_macos.sh  generate_tauri_icons.sh  install_platform_deps.sh  port-utils.sh  prompt-impl.md  prompt-improve.md  prompt-plan.md  prompt-research-process.md  prompt-research.md  ralph.sh  rotate_icon_colors.py  run_silent.sh  setup_repo.sh  spec_metadata.sh  visualize.ts
hld/: .gitignore  CLAUDE.md  Makefile  PROTOCOL.md  README.md  TESTING.md  TODO.md  go.mod  go.sum  integration_test.go  openapitools.json  run-with-logging.sh
hlyr/: .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  Makefile  README.md  THOUGHTS.md  config.md  humanlayer.example.json  package-lock.json  package.json  test_local_approvals.md  tsconfig.json  tsup.config.ts
homebrew-humanlayer/: README.md
humanlayer-go/: README.md  client.go  go.mod  models.go
humanlayer-langgraph-alpha/: .gitignore  LICENSE  Makefile  README.md  __init__.py  checkpoints.db  pyproject.toml  setup.cfg
humanlayer-langgraph-alpha/.github/workflows/: ci.yml  publish.yml
humanlayer-langgraph-alpha/examples/: README.md  dotenv.example  vanilla.py  weather_agent.py
humanlayer-langgraph-alpha/humanlayer_langgraph/: __init__.py  logger.py  nodes.py  subgraph.py
humanlayer-langgraph-alpha/tests/: test_subgraph.py
humanlayer-mcp/: .gitignore  Makefile  jest.config.js  mcp-config.json  package-lock.json  package.json  plan.md  tsconfig.json
humanlayer-ts/: .eslintrc.json  .gitignore  CHANGELOG.md  README.md  jest.config.cjs  jest.config.js  package-lock.json  package.json  tsconfig.json
humanlayer-ts-vercel-ai-sdk/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  prettier.config.cjs  tsconfig.json
humanlayer-tui/: .gitignore  CLAUDE.md  Makefile  TODO.md  api.go  approvals.go  config.go  config_test.go  conversation.go  go.mod  go.sum  history.go  humanlayer-tui  main.go  sessions.go  tui.go
humanlayer-wui/: .env.example  .env.local.example  .gitignore  .prettierignore  .prettierrc.js  CLAUDE.md  Dockerfile  HOTKEYS.md  Makefile  REACT_CODING_STANDARDS.md  REACT_REFACTOR_PLAN.md  README.md  RELEASE.md  bunfig.toml  dev-plan-test-store.md  eslint.config.mjs  happydom.ts  index.html  package-lock.json  package.json  problems.md  run-instance.sh  testing-library.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
humanlayer-wui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.nightly.conf.json
humanlayer-wui/src-tauri/capabilities/: default.json
humanlayer-wui/src-tauri/icons/: icon.icns
humanlayer-wui/src-tauri/icons-nightly/: icon.icns
humanlayer-wui/src-tauri/src/: daemon.rs  lib.rs  main.rs
humanlayer-wui/src-tauri/src/daemon_client/: client.rs  connection.rs  error.rs  mod.rs  subscriptions.rs  types.rs
monorepo/: package.json
notes/: .gitkeep
opencode-go/: README.md  client.go  client_test.go  doc.go  go.mod  types.go  types_test.go
scripts/: README.md  dev-with-posthog.sh  package.json  test.ts
specs/: ace-fca.md  advanced-context-engineering.md  hotkey-thoughts.md  workshop.md
thoughts/: CLAUDE.md  allison  dex  global  pr_description.md  shared  sundeep
(+1340 files in other folders)
