[tool.poetry]
name = "humanlayer"
version = "0.6.0"
description = "humanlayer"
authors = ["humanlayer authors <dexter@metalytics.dev>"]
repository = "https://github.com/humanlayer/humanlayer"
readme = "README.md"
packages = [
  {include = "humanlayer"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = "2.8.2"
requests = "2.32.3"
python-slugify = "8.0.4"
python-dotenv = "1.0.1"
click = "8.1.7"

[tool.poetry.scripts]
hl = "humanlayer.cli.main:cli"
humanlayer = "humanlayer.cli.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
ruff = "^0.5.6"
types-requests = "^2.32.0.20240712"
types-python-slugify = "^8.0.2.20240310"
black = "^24.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["humanlayer"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",

    # DoNotAssignLambda
    "E731",

    # Unsafe eval
    "S307",

    # long exception message
    "TRY003",

]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["humanlayer"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"humanlayer/cli/main.py" = ["TRY003"]
"humanlayer/core/types.py" = ["TRY003"]
"**/__init__.py" = ["F403"]
"**/core/protocol.py" = ["A003"]
"**/test_*.py" = ["S101"]
"**/*_test.py" = ["S101"]
"**/approval.py" = ["S101"]

[tool.ruff.mccabe]
max-complexity = 12


[tool.black]
line_length = 104

[tool.deptry]
exclude = ["examples", "venv", ".venv", "humanlayer-ts"]


[tool.deptry.per_rule_ignores]
DEP003 = ["click"]
DEP004 = ["pytest"]
